update index, manifest and updates. Add signed xpi for Firefox.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
   </head>
 
   <body>
+    <img src="icons/ss-100.bmp">
+    <h1>Salvage Search v1.0</h1>
 
-    <h1>Hey there!</h1>
+    <p>Salvage Search is a browser plugin that makes it easy to search inventory websites for vehicles. Select your browser below to install it. A search icon will appear in your toolbar.</p>
 
-    <p>This is the update page for the Salvage Search plugin. <a href="https://benetherington.github.io/salvage-search/addon-1.0.xpi">Click here to download verion 1.0</a></p>
+    <p>To use the plugin, copy a VIN (<i>ctrl-C or right click>copy</i>), then click the toolbar button. Search result tabs will open all at once.</p>
+
+    <p>To change the settings on Firefox, right click the icon, select "manage extension," then click the options tab. On Chrome, right click the icon and select "options."</p>
+
+    <strong>DOWNLOADS</strong>
+    <ul>
+      <ui>
+        <a href="https://benetherington.com/salvage-search/releases/salvage_search-1.0-fx.xpi">Firefox v1.0</a>
+      </ui>
+    </ul>
 
   </body>
 
