--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <img src="icons/ss-100.bmp">
+    <img src="icons/SS-100.bmp">
     <h1>Salvage Search v1.0</h1>
 
     <p>Salvage Search is a browser plugin that makes it easy to search inventory websites for vehicles. Select your browser below to install it. A search icon will appear in your toolbar.</p>
