--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <img src="icons/SS-100.bmp">
-    <h1>Salvage Search v1.0</h1>
+    <h1>Salvage Search v1.1</h1>
 
     <p>Salvage Search is a browser plugin that makes it easy to search inventory websites for vehicles. Select your browser below to install it. A search icon will appear in your toolbar.</p>
 
@@ -15,10 +15,10 @@
 
     <p>To change the settings on Firefox, right click the icon, select "manage extension," then click the options tab. On Chrome, right click the icon and select "options."</p>
 
-    <strong>DOWNLOADS</strong>
+    <strong>INSTALLERS</strong>
     <ul>
       <ui>
-        <a href="https://benetherington.com/salvage-search/releases/salvage_search-1.0-fx.xpi">Firefox v1.0</a>
+        <a href="http://benetherington.com/salvage-search/releases/salvage_search-1.1-fx.xpi">Firefox v1.1</a>
       </ui>
     </ul>
 
