add link to github

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </ui>
     </ul>
 
+    <p><a href="https://www.github.com/benetherington/salvage-search">Source code and licensing.</a></p>
   </body>
 
 </html>
