--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <img src="images/toolbar-inked.jpg">
 
-    <p>To use the plugin, copy a VIN (<i>ctrl-C or right click>copy</i>), then click the Salvage Search button. Search result tabs will open all at once.</p>
+    <p>To use the plugin, copy a VIN (<i>ctrl-C or right click > copy</i>), then click the Salvage Search button. Search result tabs will open all at once.</p>
 
     <p>To change which salvage yards are included in the search: On Firefox, right click the icon, select "manage extension," then click the options tab. <s>On Chrome, right click the icon and select "options."</s> A Chrome extension is forthcoming, but is not yet released.</p>
 
@@ -23,8 +23,12 @@
         <a href="http://benetherington.com/salvage-search/releases/salvage_search-1.1-fx.xpi">Firefox v1.1</a>
       </ui>
     </ul>
+    
 
-    <p><a href="https://www.github.com/benetherington/salvage-search">Source code and licensing.</a></p>
+    <br>
+    <br>
+    <hr>
+    <p><a href="https://www.github.com/benetherington/salvage-search">Source code and licensing</a></p>
   </body>
 
 </html>
