--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <img src="icons/SS-100.bmp">
     <h1>Salvage Search v1.1</h1>
 
-    <p>Salvage Search is a browser plugin that makes it easy to search inventory websites for vehicles. Select your browser below to install it. A search icon will appear in your toolbar.</p>
+    <p>Salvage Search is a browser plugin that makes it easy to search inventory websites for vehicles. Select your browser below to install it. A Salvage Search icon will appear in your toolbar, as below.</p>
 
-    <p>To use the plugin, copy a VIN (<i>ctrl-C or right click>copy</i>), then click the toolbar button. Search result tabs will open all at once.</p>
+    <img src="images/toolbar-inked.jpg">
 
-    <p>To change the settings on Firefox, right click the icon, select "manage extension," then click the options tab. On Chrome, right click the icon and select "options."</p>
+    <p>To use the plugin, copy a VIN (<i>ctrl-C or right click > copy</i>), then click the Salvage Search button. Search result tabs will open all at once.</p>
+
+    <p>To change which salvage yards are included in the search: On Firefox, right click the icon, select "manage extension," then click the options tab. <s>On Chrome, right click the icon and select "options."</s> A Chrome extension is forthcoming, but is not yet released.</p>
 
     <strong>INSTALLERS</strong>
     <ul>
@@ -21,7 +23,12 @@
         <a href="http://benetherington.com/salvage-search/releases/salvage_search-1.1-fx.xpi">Firefox v1.1</a>
       </ui>
     </ul>
+    
 
+    <br>
+    <br>
+    <hr>
+    <p><a href="https://www.github.com/benetherington/salvage-search">Source code and licensing</a></p>
   </body>
 
 </html>
