popup: implement feedback to user, styling

--- a/popup/actions.html
+++ b/popup/actions.html
@@ -11,10 +11,11 @@
 
         <div id="popup-content">
             <div class="grouped">
-                Search for a VIN: <input type="text" id="input-vin">
-                <div class="button action-search">Search</div>
+                <p>Search for a VIN:</p>
+                <input type="text" id="input-vin" size="17"><br>
+                <div id= "input-search" class="button action-search disabled">Search</div>
             </div>
-            <div class="button ungrouped action-download">Download Images</div>
+            <div id="input-download" class="button action-download ungrouped disabled">Download Images</div>
         </div>
         <div id="error-content" class="hidden">
             <p>That VIN doesn't look right...</p>
