Package firefox 2.1, update index

--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
 
     <p>Salvage Search is a browser plugin that makes it easy to search inventory websites for vehicles and download high-def images. Select your browser below to install it.</p>
 
-    <p>This plugin has two buttons with two very different functions! The first, the <b>SALVAGE SEARCH button</b>, is always available. It's in your toolbar by default:</p>
-    <img src="images/toolbar-inked.jpg">
-    <p>To use the search button, copy a VIN (<i>ctrl-C or right-click > copy</i>), then click the Salvage Search button. Search result tabs will open all at once. IAAI's website has decided it no longer searches by VIN, but maybe that will change in the future.</p>
-    <p>To change which salvage yards are included in the search: On Firefox, right click the icon, select "manage extension," then click the options tab. <s>On Chrome, right click the icon and select "options."</s> A Chrome extension is forthcoming, but is not yet released.</p>
-
+    <p>This plugin adds an extension to your toolbar, and should be fairly self-explanatory:</p>
+    <img src="images/toolbar-popup.jpg">
+    <p>Type a VIN in the text box to enable the <b>SEARCH button</b>. Search result tabs will open all at once. IAAI's website has decided it no longer searches by VIN, but maybe that will change in the future.</p>
+    <p>A future update will improve the performance of the search function (salvage websites are constantly changing). Future updates will also add additional salvage yards and a preferences page to allow you to pick which yards are in your area.</p>
+    <p>The second button, the <b>DOWNLOAD IMAGES button</b>, only enables on Copart and IAAI listing pages. The button won't enable on a search results page!
+    <p>Copart loads very quickly, but IAAI will take a little longer, and a progress bar will be displayed. If you click away from the popup while downloading IAAI images, the download will be canceled.</p>
+    <br>
+    <p>I'll freely admit I coded this in a weekend, and sometimes it might not work. If that happens, try refreshing the page and giving it another go. If it still doesn't work, send me the listing page you're trying to download from and I'll see what I can do.</p>
+    <p>IAAI also provides panoramic interior photos and exterior walkarounds. They won't be downloaded by this extension, but a future update should include them.</p>
     <br><br>
 
-    <p>The second button, the <b>DOWNLOAD IMAGES button</b>, only appears on Copart and IAAI listing pages. It appears on the right end of the address bar:</p>
-    <img src="images/page-action-inked.jpg">
-    <p>To use the download images button, make sure you're on a Copart or IAAI listing page, where the sale information, and vehicle year/make/model are displayed. The button won't appear on a search page! When the button appears, just click it! The high resolution images for this vehicle will be downloaded. Copart loads very quickly, but IAAI will take a little longer, and a progress bar will be displayed. It's worth the wait, though! You'll get images with no water marks across the middle of them.</p>
-    <p>I'll freely admit I coded this in a weekend, and sometimes it might not work. If that happens, try refreshing the page and giving it another go. If that doesn't work, send me the lot number and I'll see what I can do.</p>
-    <p>IAAI also provides panoramic interior photos and exterior walkarounds, but I wanted to get this released soonest, and haven't yet addressed those features. Look for them in a future update.</p>
-    <br><br>
-
-    <strong>INSTALLERS</strong>
+    <strong>FIREFOX</strong>
     <ul>
       <ui>
-        <a href="http://benetherington.com/salvage-search/releases/salvage_search-2.0-fx.xpi">Firefox v2.0</a>
+        <a href="http://benetherington.com/salvage-search/releases/salvage_search-2.1-fx.xpi">Firefox v2.1</a>
       </ui>
     </ul>
-    
+    <strong>CHROME</strong>
+    <ul>
+      <ui>
+        <a href="https://chrome.google.com/webstore/detail/salvage-search/okbjgjdpehblohdlmocliddhkhpkikoh">Chrome v2.0</a>
+      </ui>
+    </ul>
 
     <br>
     <br>
