Add settings toggles, add settings page content

--- a/popup/actions.html
+++ b/popup/actions.html
@@ -36,8 +36,37 @@
 
 <!-- SETTINGS PAGE -->
             <div class="slider-page" id="settings">
-            <div id="input-download" class="button action-download ungrouped disabled">Download Images</div>
-        </div>
+                <div class="settings-grid grouped">
+                    <div class="settings-title">Salvage search:</div>
+
+                    <div class="toggle-cover"><div class="toggle">
+                        <input type="checkbox" class="checkbox" id="copart">
+                        <div class="knobs">
+                            <span></span>
+                        </div>
+                        <div class="layer"></div>
+                    </div></div>
+                    <div class="settings-label">Copart.com</div>
+
+                    <div class="toggle-cover"><div class="toggle">
+                        <input type="checkbox" class="checkbox" id="iaai">
+                        <div class="knobs">
+                            <span></span>
+                        </div>
+                        <div class="layer"></div>
+                    </div></div>
+                    <div class="settings-label">IAAI.com</div>
+
+                    <div class="toggle-cover"><div class="toggle">
+                        <input type="checkbox" class="checkbox" id="row52">
+                        <div class="knobs">
+                            <span></span>
+                        </div>
+                        <div class="layer"></div>
+                    </div></div>
+                    <div class="settings-label">Row52.com</div>
+                
+                </div>
             </div>
 
         </div></div>
