Add version number to settings

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -13,12 +13,14 @@
             <div id="button-main" class="button arrow-left hidden"></div>
             <div id="button-settings" class="button gear-fill"></div>
         </div>
+
+
+
+        <!-- SLIDING PAGES -->
         <div class="slider" id="slider"><div class="slider-holder">
 
-
- 
 <!-- MAIN PAGE -->
-            <div class="slider-page" id="main">
+            <div class="slider-page active" id="main">
                 <div class="grouped">
                     <!-- <p>Search for a VIN:</p> -->
                     <input type="text" id="input-vin" class="input-big" size="17" placeholder="VIN"><br>
@@ -31,8 +33,6 @@
                     </div>
                 </div>
             </div>
-
-
 
 <!-- SETTINGS PAGE -->
             <div class="slider-page" id="settings">
@@ -67,8 +67,10 @@
                     <div class="settings-label">Row52.com</div>
                 
                 </div>
+                <p class="tiny" id="version">vX.X</p>
             </div>
 
+<!-- END SLIDING PAGES -->
         </div></div>
 
 
