Add zip to settings

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -57,6 +57,9 @@
                     </div></div>
                     <div class="settings-label">IAAI.com</div>
 
+                    <input type="text" id="zip" class="input-small" size="5" maxlength="5">
+                    <div class="settings-label">IAAI ZIP</div>
+
                     <div class="toggle-cover"><div class="toggle">
                         <input type="checkbox" class="checkbox" id="row52">
                         <div class="knobs">
