Add notification drawer, tidy CSS

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -16,10 +16,10 @@
 
 
 
-        <!-- SLIDING PAGES -->
+<!-- SLIDING PAGES -->
         <div class="slider" id="slider"><div class="slider-holder">
 
-<!-- MAIN PAGE -->
+        <!-- MAIN PAGE -->
             <div class="slider-page active" id="main">
                 <div class="grouped">
                     <!-- <p>Search for a VIN:</p> -->
@@ -27,14 +27,9 @@
                     <div id= "button-search" class="button disabled">Search</div>
                 </div>
                 <div id="button-download" class="button ungrouped disabled">Download Images</div>
-                <div id="error-area">
-                    <div id="error-drawer" class="hidden">
-                        <p>That VIN doesn't look right...</p>
-                    </div>
-                </div>
             </div>
 
-<!-- SETTINGS PAGE -->
+        <!-- SETTINGS PAGE -->
             <div class="slider-page" id="settings">
                 <div class="settings-grid grouped">
                     <div class="settings-title">Salvage search:</div>
@@ -75,6 +70,10 @@
 
 <!-- END SLIDING PAGES -->
         </div></div>
+
+<!-- STATIC notification BAR -->
+        <div id="notification-drawer" class="drawer hidden">
+        </div>
 
 
     </body>
