--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="actions.css"/>
         <script src="/browser-polyfill.js"></script>
-        <script src="actions.js"></script>
+        <script src="/shared-assets.js"></script>
     </head>
     <body>
 <!-- STATIC TOOLBAR -->
