add download progress bar

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="actions.css"/>
         <script src="/browser-polyfill.js"></script>
         <script src="/shared-assets.js"></script>
+        <script src="/popup/actions.js"></script>
     </head>
     <body>
 <!-- STATIC TOOLBAR -->
@@ -26,7 +27,7 @@
                     <input type="text" id="input-vin" class="input-big" size="17" placeholder="VIN"><br>
                     <div id= "button-search" class="button disabled">Search</div>
                 </div>
-                <div id="button-download" class="button ungrouped disabled">Download Images</div>
+                <div id="button-download" data-style-orig="button ungrouped" class="button ungrouped disabled">Download Images</div>
             </div>
 
         <!-- SETTINGS PAGE -->
