Add chrome link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <strong>CHROME</strong>
     <ul>
       <ui>
-        <u>Chrome v2.2</u> -- <i>currently in review by Google, available soon.</i>
+        <a href="https://chrome.google.com/webstore/detail/salvage-search/okbjgjdpehblohdlmocliddhkhpkikoh?hl=en&authuser=0">Chrome v2.2</a>
       </ui>
     </ul>
     <br><br>
