--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 
     <strong>FIREFOX</strong>
     <ul>
-      <ui>
+      <li>
         <a href="http://benetherington.com/salvage-search/releases/salvage_search-2.2-fx.xpi">Firefox v2.2</a>
-      </ui>
+      </li>
+      <li>
+        <a href="https://github.com/benetherington/salvage-search/raw/search-iaai/releases/salvage_search-2.3b1.zip">Firefox v2.3 beta 1</a> <i>For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+      </li>
     </ul>
     <strong>CHROME</strong>
     <ul>
-      <ui>
-        <u>Chrome v2.2</u> -- <i>currently in review by Google, available soon.</i>
-      </ui>
+      <li>
+        <a href="https://chrome.google.com/webstore/detail/salvage-search/okbjgjdpehblohdlmocliddhkhpkikoh?hl=en&authuser=0">Chrome v2.2</a>
+      </li>
     </ul>
     <br><br>
 
