--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <strong>FIREFOX</strong>
     <ul>
       <li>
-        <a href="http://benetherington.com/salvage-search/releases/salvage_search-2.2-fx.xpi">Firefox v2.2</a>
+        <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.2-fx.xpi">Firefox v2.2</a>
       </li>
       <li>
-        <a href="https://github.com/benetherington/salvage-search/releases/salvage_search-2.3b2.zip">Firefox v2.3 beta 2</a> <i>For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+        <a href="https://benetherington.com/salvage-search/releases/salvage-search-2.3b2.zip">Firefox v2.3 beta 2</a> <i>For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
       </li>
     </ul>
     <strong>CHROME</strong>
