--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -54,7 +54,7 @@
                     <div class="settings-label">IAAI.com</div>
 
                     <input type="text" id="zip" class="input-small" size="5" maxlength="5">
-                    <div class="settings-label">IAAI ZIP</div>
+                    <div class="settings-label">IAAI ZIP (depricated!)</div>
 
                     <div class="toggle-cover"><div class="toggle">
                         <input type="checkbox" class="checkbox" id="row52">
