Add helper label for fallback setting

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -71,9 +71,22 @@
                         </div>
                         <div class="layer"></div>
                     </div></div>
+                    <span class="helper-wrapper">
                         <div class="settings-label">
                             Fallback to searches
+                                <div class="helpertext">
+                                When a search returns no results
+                                from any of the selected salvage websites, you might decide
+                                to search each site by hand. If this setting is turned
+                                off, a new tab will only be opened if your vehicle was
+                                located. If this setting is turned on, a new tab will be
+                                opened for each of the selected websites, showing you
+                                the results of the search.
                             </div>
+                        </div>
+                    </span>
+
+                </div>
                 <p class="tiny ungrouped" id="version">vX.X</p>
             </div>
 
