Update progress bar styling. Eliminate gradient seam, allow animated transition between feedback-download and -progress

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -24,7 +24,7 @@
             <div class="slider-page active" id="main">
                 <div class="grouped">
                     <input type="text" id="input-vin" class="input-big" size="17" placeholder="VIN"><br>
-                    <div id= "button-search" class="button disabled">Search</div>
+                    <div id= "button-search" class="button disabled" data-style-orig="button">Search</div>
                 </div>
                 <div id="button-download" data-style-orig="button ungrouped" class="button ungrouped disabled">Download Images</div>
             </div>
