Disable fallbacks (will implement in future)

--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -61,7 +61,7 @@
                     </div></div>
                     <div class="settings-label">Row52.com</div>
 
-                    <input type="text" id="zip" class="input-small" size="5" maxlength="5">
+                    <!-- <input type="text" id="zip" class="input-small" size="5" maxlength="5">
                     <div class="settings-label">ZIP for fallback searches</div>
                     
                     <div class="toggle-cover"><div class="toggle">
@@ -84,7 +84,7 @@
                                 the results of the search.
                             </div>
                         </div>
-                    </span>
+                    </span> -->
 
                 </div>
                 <p class="tiny ungrouped" id="version">vX.X</p>
