--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.2-fx.xpi">Firefox v2.2</a>
       </li>
       <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage-search-2.3b3.zip">Firefox v2.3 beta 3</a> <i>For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+        <a href="https://benetherington.com/salvage-search/releases/salvage-search-2.3b4.zip">Firefox v2.3 beta 4 (10/21)</a> <i>For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
       </li>
     </ul>
     <strong>CHROME</strong>
