--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://benetherington.com/salvage-search/releases/salvage_search-2.2-fx.xpi">Firefox v2.2</a>
       </li>
       <li>
-        <a href="https://benetherington.com/salvage-search/releases/salvage-search-2.3b4.zip">Firefox v2.3 beta 4</a> <i>(10/21/21) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
+        <a href="https://benetherington.com/salvage-search/releases/salvage-search-2.3b5.zip">Firefox v2.3 beta 5</a> <i>(10/23/21) For advanced users. <a href="https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/">How to install.</a></i>
       </li>
     </ul>
     <strong>CHROME</strong>
@@ -38,7 +38,7 @@
     <p>Copart loads very quickly, but IAAI will take a little longer, and a progress bar will be displayed. If you click away from the popup while downloading IAAI images, the download will be canceled.</p>
     <p>You can also click the <b>GEAR BUTTON</b> to edit your settings. v2.2 allows you to change your settings, but doesn't put them into effect. v2.3 will include updated search performance, and will actually respect your settings.</p>
     <br>
-    <p>I'll freely admit I coded the bulk of this over a weekend. I've worked out a lot of bugs, but everyone uses their computer differently, and something might break. If that happens, try refreshing the page and giving it another go. If it still doesn't work, send me the listing page you're trying to download from and I'll see what I can do.</p>
+    <p>This extension has become something I'm proud of! I've worked out a lot of bugs, but everyone uses their computer differently, and something might break. Salvage yard websites aren't designed to make this kind of thing easy, and they might change something without warning. If something doesn't work, or doesn't work the way you'd like, get in touch. Be sure to send me as much info as you can, and I'll see what I can do.</p>
     <br><br>
     
     <h2>REQUIRED PERMISSIONS</h2>
@@ -53,8 +53,9 @@
 
     <h2>PLANNED FEATURES</h2>
     <ul>
-      <li>Improve search reliability on Copart</li>
-      <li>Filter IAAI search results by ZIP and sanitized VIN</li>
+      <li>Improve search reliability on Copart <i>(addressed in 2.3!)</i></li>
+      <li>Filter IAAI search results by ZIP and sanitized VIN <i>(not required! VIN searches work in 2.3 beta 3!)</i></li>
+      <li>Download images from archived and no-longer-available listing pages <i>(addressed in 2.3 beta 5!)</i></li>
       <li>Download IAAI's panoramic interior photos and exterior walkarounds</li>
       <li>Speed up IAAI image processing time (it takes forever to assure good images, need to better characterize openSeaDragon's behavior first)</li>
       <li>Present image previews and download a zip of only the selected images</li>
