--- a/src/popup/actions.html
+++ b/src/popup/actions.html
@@ -70,6 +70,16 @@
                     </div></div>
                     <div class="settings-label">Poctra.com</div>
 
+                    <div class="toggle-cover"><div class="toggle">
+                        <input type="checkbox" class="checkbox" id="bidfax">
+                        <div class="knobs">
+                            <span></span>
+                        </div>
+                        <div class="layer"></div>
+                    </div></div>
+                    <div class="settings-label">BidFax.info</div>
+
+
                     <!-- <input type="text" id="zip" class="input-small" size="5" maxlength="5">
                     <div class="settings-label">ZIP for fallback searches</div>
                     
